4. If 'single' passed as query param then ignore players on other LMS servers.
5. Remove LMS8.2 shuffle mode setting from 'Random mix' dialog, as this
   setting will now be generic and not random mix specific.
6. Hide alarm settings if alarm functionality is disabled.
7. When click browse's back button after clicking (...) in now-playing re-show
   now-playing MAI view.

2.4.0
-----
 1. Add categories when browsing into years. e.g. My Music / Years / 2021 /
    Genres / Hard Rock / Albums
 2. Add basic 'swap' queue command.
 3. Blur background images - requires browser supports backdrop-filter CSS.
 4. Add support for 'single' URL query. When this is set, and a player name or
    id, is passed, then Material will only control this player and will ignore
    others.
 5. Only show 'Append random album' in artist's album list if more than 1 album.
 6. Reduce size of 'Scroll queue to current track' icon.
 7. Make 'Settings' menu entry open a sub-menu with specific settings.
 8. Add 'Add to favourites' action to all dynamic playlists with a playlistid and
    that have a 'Play now' action.
 9. Highlight player names on hover in 'Manage players' dialog.
10. Add back/title entry to sub-menus.
11. Allow to add custom entries to settings sub-menu.
12. Re-title MAI views to 'Artist', 'Album', and 'Track'
13. Add album list to MAI 'Artist' view.
14. Add track list to MAI 'Album' view.
15. Add, server-side, option to hide volume controls for fixed volume players.
16. Highlight current list, or grid, item that is showing menu or which was
    clicked and has caused Material to fetch a new list of items.
17. Fix UTF-8 strings in podcast searches, by having LMS side decode XML/JSON.
18. Show Last.fm similar artists list in MAI 'Artist' view.
19. List artist, albumartist, composer, conductor, band, year, genre, and tech
    info in MAI 'Track' view.
20. Fix position of tech info and rating stars in desktop bottom bar.
21. Add setting to toggle alarm fade in.