@@ -9,6 +9,7 @@
 6. Hide alarm settings if alarm functionality is disabled.
 7. When click browse's back button after clicking (...) in now-playing re-show
    now-playing MAI view.
+8. Only navigate back into now-playing from browse if using mobile layout.
 
 2.4.0
 -----
